[package]
name = "geo-validity-check"
version = "0.1.0"
edition = "2021"

[dependencies]
geo-types = "^0.7"
geo = "^0.24"
robust = "0.2.3"
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
float_next_after = "1.0.0"

[dev-dependencies]
sfcgal = "0.6.0"
geos = { version = "8.1.0", features = ["geo"] }